--- a/Coogram/Storyboards/AddImage.storyboard
+++ b/Coogram/Storyboards/AddImage.storyboard
@@ -354,6 +354,7 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                     <connections>
+                                                        <action selector="NameTextFieldDidChange:" destination="ZLc-zS-DTe" eventType="editingChanged" id="E5z-t4-mJS"/>
                                                         <outlet property="delegate" destination="ZLc-zS-DTe" id="tjc-O9-hHt"/>
                                                     </connections>
                                                 </textField>
@@ -362,11 +363,16 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                     <connections>
+                                                        <action selector="CountTextFieldChanged:" destination="ZLc-zS-DTe" eventType="editingChanged" id="5wz-HS-vYW"/>
                                                         <outlet property="delegate" destination="ZLc-zS-DTe" id="SFa-0D-eZN"/>
                                                     </connections>
                                                 </textField>
                                                 <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GpL-XH-J0e">
                                                     <rect key="frame" x="350.5" y="0.0" width="63.5" height="60"/>
+                                                    <connections>
+                                                        <outlet property="dataSource" destination="ZLc-zS-DTe" id="FfB-Ae-OP7"/>
+                                                        <outlet property="delegate" destination="ZLc-zS-DTe" id="Db1-tp-Ciu"/>
+                                                    </connections>
                                                 </pickerView>
                                             </subviews>
                                             <constraints>
@@ -478,6 +484,9 @@
                                                     <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="mwF-Np-lzM" id="FiF-yQ-Tvl"/>
+                                                    </connections>
                                                 </textView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ScB-Vo-UfM">
                                                     <rect key="frame" x="20" y="11" width="374" height="150"/>
@@ -487,7 +496,7 @@
                                                         <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="25"/>
                                                     </state>
                                                     <connections>
-                                                        <action selector="AddImageTapped:" destination="Lv9-Bb-PYR" eventType="touchUpInside" id="h0q-6q-Yla"/>
+                                                        <action selector="AddImageButtonTapped:" destination="mwF-Np-lzM" eventType="touchUpInside" id="LyY-vg-2OW"/>
                                                     </connections>
                                                 </button>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eRP-mz-aT1">
@@ -495,18 +504,21 @@
                                                 </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="ScB-Vo-UfM" firstAttribute="bottom" secondItem="eRP-mz-aT1" secondAttribute="bottom" id="1lE-ct-q4c"/>
-                                                <constraint firstItem="eRP-mz-aT1" firstAttribute="leading" secondItem="eya-hG-QU3" secondAttribute="leadingMargin" id="7ZI-aM-zNe"/>
-                                                <constraint firstItem="ScB-Vo-UfM" firstAttribute="top" secondItem="eRP-mz-aT1" secondAttribute="top" id="BPC-2f-Dpr"/>
+                                                <constraint firstItem="eRP-mz-aT1" firstAttribute="centerX" secondItem="ScB-Vo-UfM" secondAttribute="centerX" id="0Ke-9G-pzf"/>
+                                                <constraint firstItem="eRP-mz-aT1" firstAttribute="centerY" secondItem="ScB-Vo-UfM" secondAttribute="centerY" id="0tg-Ie-3M4"/>
+                                                <constraint firstItem="ScB-Vo-UfM" firstAttribute="leading" secondItem="eya-hG-QU3" secondAttribute="leadingMargin" id="4tT-fY-Uze"/>
+                                                <constraint firstItem="eRP-mz-aT1" firstAttribute="bottom" secondItem="ScB-Vo-UfM" secondAttribute="bottom" id="FIh-sv-aCG"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="zyZ-R4-GLZ" secondAttribute="trailing" id="FqB-D1-fyc"/>
-                                                <constraint firstItem="eRP-mz-aT1" firstAttribute="height" secondItem="eya-hG-QU3" secondAttribute="height" multiplier="0.5" id="Izf-0P-DF2"/>
-                                                <constraint firstItem="ScB-Vo-UfM" firstAttribute="leading" secondItem="eRP-mz-aT1" secondAttribute="leading" id="QZQ-Gg-Si1"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="eRP-mz-aT1" secondAttribute="trailing" id="SMp-6h-5JO"/>
+                                                <constraint firstItem="eRP-mz-aT1" firstAttribute="top" secondItem="ScB-Vo-UfM" secondAttribute="top" id="HtZ-yb-s6K"/>
+                                                <constraint firstItem="zyZ-R4-GLZ" firstAttribute="top" secondItem="ScB-Vo-UfM" secondAttribute="bottom" id="JhX-V5-yHI"/>
+                                                <constraint firstItem="ScB-Vo-UfM" firstAttribute="height" secondItem="eya-hG-QU3" secondAttribute="height" multiplier="0.5" id="WYu-nq-lue"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="zyZ-R4-GLZ" secondAttribute="bottom" id="aUc-21-ENs"/>
+                                                <constraint firstItem="ScB-Vo-UfM" firstAttribute="top" secondItem="eya-hG-QU3" secondAttribute="topMargin" id="bnQ-D7-pS1"/>
                                                 <constraint firstItem="zyZ-R4-GLZ" firstAttribute="leading" secondItem="eya-hG-QU3" secondAttribute="leadingMargin" id="gEQ-Z2-sdB"/>
-                                                <constraint firstItem="ScB-Vo-UfM" firstAttribute="trailing" secondItem="eRP-mz-aT1" secondAttribute="trailing" id="oCb-Uz-iQ6"/>
-                                                <constraint firstItem="eRP-mz-aT1" firstAttribute="top" secondItem="eya-hG-QU3" secondAttribute="topMargin" id="vqa-tf-seA"/>
-                                                <constraint firstItem="zyZ-R4-GLZ" firstAttribute="top" secondItem="eRP-mz-aT1" secondAttribute="bottom" id="zfm-D9-u1j"/>
+                                                <constraint firstItem="eRP-mz-aT1" firstAttribute="leading" secondItem="ScB-Vo-UfM" secondAttribute="leading" id="i6S-ia-xbM"/>
+                                                <constraint firstItem="eRP-mz-aT1" firstAttribute="height" secondItem="eya-hG-QU3" secondAttribute="height" multiplier="0.5" id="lUB-AO-bWy"/>
+                                                <constraint firstItem="ScB-Vo-UfM" firstAttribute="trailing" secondItem="eya-hG-QU3" secondAttribute="trailingMargin" id="uAE-h4-gTn"/>
+                                                <constraint firstItem="eRP-mz-aT1" firstAttribute="trailing" secondItem="ScB-Vo-UfM" secondAttribute="trailing" id="yYh-VF-nIY"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
