--- a/Coogram/Storyboards/PostView.storyboard
+++ b/Coogram/Storyboards/PostView.storyboard
@@ -30,7 +30,7 @@
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Yte-jT-2Ph">
                                         <rect key="frame" x="8" y="421" width="60" height="56.666666666666686"/>
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" red="0.91764705879999997" green="0.6705882353" blue="0.3803921569" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="1eR-5n-Cn5"/>
                                             <constraint firstAttribute="width" constant="60" id="Bgh-CQ-aFn"/>
@@ -87,23 +87,23 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="364" placeholderIntrinsicHeight="150" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fnh-l8-geN" customClass="SelfSizedTableView" customModule="Coogram" customModuleProvider="target">
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="364" placeholderIntrinsicHeight="150" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="30" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fnh-l8-geN" customClass="SelfSizedTableView" customModule="Coogram" customModuleProvider="target">
                                         <rect key="frame" x="20" y="729.33333333333337" width="374" height="150"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PostIngridientTableViewCell" id="XAg-l7-mb4" customClass="PostIngridientTableViewCell" customModule="Coogram" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="28" width="374" height="20.666666030883789"/>
+                                                <rect key="frame" x="0.0" y="28" width="374" height="30"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XAg-l7-mb4" id="qjr-eK-892">
-                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="20.666666030883789"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="zLa-mI-2Xs">
-                                                            <rect key="frame" x="0.0" y="0.99999999999999822" width="37.333333333333336" height="19.333333333333336"/>
+                                                            <rect key="frame" x="0.0" y="0.99999999999999822" width="37.333333333333336" height="28.666666666666664"/>
                                                             <color key="tintColor" red="0.91764705879999997" green="0.6705882353" blue="0.3803921569" alpha="1" colorSpace="calibratedRGB"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ingridient and number of counting" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vnh-m1-HC3">
-                                                            <rect key="frame" x="37.333333333333343" y="0.0" width="259.33333333333326" height="20.666666666666668"/>
+                                                            <rect key="frame" x="37.333333333333343" y="0.0" width="259.33333333333326" height="30"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -124,6 +124,10 @@
                                                 </connections>
                                             </tableViewCell>
                                         </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="RCF-SG-x0l" id="2SW-wr-hBC"/>
+                                            <outlet property="delegate" destination="RCF-SG-x0l" id="Bpc-7Y-PHR"/>
+                                        </connections>
                                     </tableView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aCw-Ng-2sp">
                                         <rect key="frame" x="0.0" y="879.33333333333337" width="434" height="1"/>
@@ -132,8 +136,8 @@
                                             <constraint firstAttribute="height" constant="1" id="tTF-Ec-N8K"/>
                                         </constraints>
                                     </view>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="364" placeholderIntrinsicHeight="400" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ekr-Xd-uhd" customClass="SelfSizedTableView" customModule="Coogram" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="899.33333333333348" width="414" height="400"/>
+                                    <tableView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="364" placeholderIntrinsicHeight="600" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="400" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ekr-Xd-uhd" customClass="SelfSizedTableView" customModule="Coogram" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="899.33333333333348" width="414" height="600"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PostDescriptionTableViewCell" rowHeight="300" id="QLa-mb-28U" customClass="PostDescriptionTableViewCell" customModule="Coogram" customModuleProvider="target">
@@ -172,12 +176,16 @@
                                                 </connections>
                                             </tableViewCell>
                                         </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="RCF-SG-x0l" id="3Mo-WI-pGW"/>
+                                            <outlet property="delegate" destination="RCF-SG-x0l" id="wUR-r6-9c9"/>
+                                        </connections>
                                     </tableView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Coogram" translatesAutoresizingMaskIntoConstraints="NO" id="pQd-pO-XFt">
-                                        <rect key="frame" x="0.0" y="1319.3333333333333" width="414" height="163.66666666666674"/>
+                                        <rect key="frame" x="0.0" y="1519.3333333333333" width="414" height="163.66666666666674"/>
                                     </imageView>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="kDS-OD-inZ">
-                                        <rect key="frame" x="0.0" y="1483" width="414" height="131"/>
+                                        <rect key="frame" x="0.0" y="1683" width="414" height="131"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="USO-CD-bev">
                                             <size key="itemSize" width="50" height="50"/>
@@ -222,12 +230,15 @@
                                         </connections>
                                     </collectionView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y30-XZ-8MT">
-                                        <rect key="frame" x="374" y="604" width="30" height="30"/>
+                                        <rect key="frame" x="374" y="1005" width="30" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="eMN-bj-uhE"/>
                                             <constraint firstAttribute="height" constant="30" id="i5W-Dr-Vqi"/>
                                         </constraints>
                                         <state key="normal" image="Cancel"/>
+                                        <connections>
+                                            <action selector="closeButtonTapped:" destination="RCF-SG-x0l" eventType="touchUpInside" id="J5g-Jr-NnP"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -269,7 +280,7 @@
                                     <constraint firstItem="aHi-vb-dIE" firstAttribute="trailing" secondItem="Ekr-Xd-uhd" secondAttribute="trailing" id="trx-5c-uSM"/>
                                     <constraint firstItem="U78-2g-dqv" firstAttribute="top" secondItem="Yte-jT-2Ph" secondAttribute="top" id="u94-qz-Pji"/>
                                     <constraint firstItem="ufr-nI-zvW" firstAttribute="top" secondItem="a5j-rk-g7S" secondAttribute="bottom" constant="15" id="ubN-3S-wUj"/>
-                                    <constraint firstItem="aHi-vb-dIE" firstAttribute="bottom" secondItem="pQd-pO-XFt" secondAttribute="bottom" constant="200" id="wBx-DV-ahc"/>
+                                    <constraint firstItem="aHi-vb-dIE" firstAttribute="bottom" secondItem="pQd-pO-XFt" secondAttribute="bottom" constant="120" id="wBx-DV-ahc"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="aHi-vb-dIE"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="7Fu-rO-CQL"/>
